src/style.css
@import "tailwindcss";

@font-face {
  font-family: "Junicode";
  src: url("./fonts/junicode/JunicodeVF-Roman.woff2") format("woff2");
  font-style: normal;
}

@font-face {
  font-family: "Junicode";
  src: url("./fonts/junicode/JunicodeVF-Italic.woff2") format("woff2");
  font-style: italic;
}

@theme {
  --color-accent: #550b4f;
  --color-back: #30002c;
  --color-primary: #fff4ff;
  --color-diminished: #c69fc6;
  --color-link: #ff66ff;
  --color-link-visited: #df46df;
  --font-body: "Junicode", serif;
}

@layer base {
  body {
    background-color: var(--color-back);
    color: var(--color-primary);
    font-family: var(--font-body);
    font-size: var(--text-base);
  }

  a {
    color: var(--color-link);
    position: relative;

    &::after {
      content: "";
      position: absolute;
      bottom: 4px;
      left: 0;
      width: 100%;
      height: 1px;
      transform: scaleX(0);
      background-color: var(--color-link);
      border-radius: 5px;
      transform-origin: bottom center;
      transition: all 0.1s ease-out;

      @media (prefers-reduced-motion: reduce) {
        transition: none;
      }
    }

    &:hover::after {
      transform: scaleX(1);
      transform-origin: bottom center;
    }

    &:visited {
      color: var(--color-link-visited);

      &:hover::after {
        background-color: var(--color-link-visited);
      }
    }
  }

  h1 {
    font-size: var(--text-3xl);
  }

  h2 {
    font-size: var(--text-2xl);
  }

  h3 {
    font-size: var(--text-xl);
  }

  p {
    font-size: var(--text-lg);
    margin: calc(var(--spacing) * 2) 0;
  }

  li {
    font-size: var(--text-lg);
  }
}

@custom-variant hocus (&:hover, &:focus);

